--- a/conf/hieradata/RedHat/Amazon.yaml
+++ b/conf/hieradata/RedHat/Amazon.yaml
@@ -3,5 +3,7 @@
 base::python_package: python27
 base::python_cheetah_package: python27-cheetah
 
-apache::apache_name: httpd24
+#apache::apache_name: httpd24
+# Amazon Linux 2 the package name is httpd
+apache::apache_name: httpd
 apache::apache_version: "2.4"
