--- a/provisioners/puppet/modules/config/data/RedHat/Amazon.yaml
+++ b/provisioners/puppet/modules/config/data/RedHat/Amazon.yaml
@@ -1,9 +1,17 @@
 ---
 # Values that should only be applied to Amazon Linux
 
-config::base::python_package: python27
-config::base::python_pip_package: python27-pip
-config::base::python_cheetah_package: python27-cheetah
+#config::base::python_package: python27
+# Amazon Linux 2 the package name is python
+config::base::python_package: python
+
+#config::base::python_pip_package: python27-pip
+# Amazon Linux 2 the package name is python2-pip
+config::base::python_pip_package: python2-pip
+
+#config::base::python_cheetah_package: python27-cheetah
+# Amazon Linux 2 the package name is python-cheetah
+config::base::python_cheetah_package: python-cheetah
 
 config::base::collectd_packages:
     - collectd-python
